Fix docker build, api docs and shutdown
