# internal/dto/create_subscription_response.go
@@ -1,0 +1,5 @@
+package dto
+
+type CreateSubscriptionResponse struct {
+	ID string `json:"id"`
+}
